jsp refactored using fmt

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -28,9 +28,9 @@ cover.soft=soft
 cover.hard=hard
 cover.special=special
 id=id
-bookstore=bookstore
-book=book
-books=books
+bookstore=Bookstore
+book=Book
+books=Books
 add_to_cart=Add to cart
 no_books_found=No books found
 first=first
@@ -38,12 +38,13 @@ next=next
 previous=previous
 last=last
 your_cart_is_empty=Your cart is empty
-cart=cart
+cart=Cart
 quantity=quantity
 cost=cost
 confirm_order=Confirm order
 order=order
 delivery_type=delivery type
+select.delivery_type=Select delivery type
 delivery_type.courier=courier
 delivery_type.bike=bike
 delivery_type.car=car
@@ -55,6 +56,7 @@ order_status.confirmed=confirmed
 order_status.completed=completed
 order_status.cancelled=cancelled
 payment_method=payment method
+select.payment_method=Select payment method
 payment_method.cash=cash
 payment_method.card=card
 payment_method.bank_transfer=bank transfer
@@ -73,6 +75,7 @@ lastname=lastname
 email=email
 password=password
 role=role
+select.role=Select role
 role.user=user
 role.manager=manager
 role.admin=admin
@@ -81,10 +84,14 @@ something_went_wrong=Something went wrong
 login=Log in
 home=home
 logout=Log Out
-register=register
+register=Register
 search=search
 successful_order=Successful order
 number_of_your_order_is=Number of your order is
 our_manager_will_contact_you_soon=Our manager will contact you soon!
 no_users_found=No users found
 welcome.home=Welcome to bookstore, dear
+edit=Edit
+users=Users
+add.user=Add user
+guest=Guest
