fixed some localization issues, still doesn't work

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -90,9 +90,30 @@ successful_order=Successful order
 number_of_your_order_is=Number of your order is
 our_manager_will_contact_you_soon=Our manager will contact you soon!
 no_users_found=No users found
-welcome.home=Welcome to bookstore, dear
 edit=Edit
 users=Users
 add.user=Add user
-guest=Guest
 remove=Remove
+books.unable_to_find_containing=Unable to find books containing
+in_title=in title
+count_failed=Count failed
+book.unable_to_find_id=Unable to find book with id
+book.unable_to_find_isbn=Unable to find book with isbn
+books.unable_to_find_author=Unable to find books written by
+items.not_found_by_ord_id=No order items for order id
+order.unable_to_find_id=Unable to find order with id
+orders.unable_to_find=Unable to find orders
+order.unable_to_create=Unable to create order
+order.unable_to_update=Unable to update order
+order.unable_to_delete=Unable to delete order
+items.not_found=Unable to find items
+item.unable_to_create=Unable to create order item
+item.unable_to_update=Unable to update order item
+item.unable_to_delete=Unable to delete order item
+user.unable_to_create=Unable to create user
+user.unable_to_update=Unable to update user
+user.unable_to_delete=Unable to delete user
+user.unable_to_find_id=Unable to find user with id
+user.unable_to_find_email=Unable to find user with email
+users.not_found=No users found
+users.unable_to_find_lastname=Unable to find users with lastname
