--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -117,3 +117,5 @@ user.unable_to_find_id=Unable to find user with id
 user.unable_to_find_email=Unable to find user with email
 users.not_found=No users found
 users.unable_to_find_lastname=Unable to find users with lastname
+my_orders=My orders
+orders.not_found=No orders found
