order editing added for user

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -119,3 +119,6 @@ users.not_found=No users found
 users.unable_to_find_lastname=Unable to find users with lastname
 my_orders=My orders
 orders.not_found=No orders found
+edit_order=Edit order
+select.order_status=Select order status
+select.payment_status=Select payment status
