fixed some error issues

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -122,3 +122,4 @@ orders.not_found=No orders found
 edit_order=Edit order
 select.order_status=Select order status
 select.payment_status=Select payment status
+error.email_in_use = The email address you provided is already in use by another member.
