--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -119,3 +119,4 @@ users.not_found=No users found
 users.unable_to_find_lastname=Unable to find users with lastname
 my_orders=My orders
 orders.not_found=No orders found
+error.email_in_use = The email address you provided is already in use by another member.
