fixed some error issues, demo validation performed

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -123,3 +123,24 @@ edit_order=Edit order
 select.order_status=Select order status
 select.payment_status=Select payment status
 error.email_in_use = The email address you provided is already in use by another member.
+error.invalid_email = Email is not valid
+error.invalid_password = Password doesn't meet the requirements
+error.invalid_firstname = Firstname doesn't meet the requirements
+error.invalid_lastname = Lastname doesn't meet the requirements
+error.invalid_title = Title doesn't meet the requirements
+error.invalid_author = Author doesn't meet the requirements
+error.invalid_pages = Number of pages is too small
+error.invalid_isbn = Isbn doesn't meet the requirements
+error.invalid_genre = Genre doesn't meet the requirements
+error.invalid_cover = Cover doesn't meet the requirements
+error.invalid_price = Price doesn't meet the requirements
+error.invalid_rating = Rating doesn't meet the requirements
+error.invalid_user = Invalid user
+error.invalid_order_status = Invalid order status
+error.invalid_payment_method = Invalid payment method
+error.invalid_payment_status = Invalid payment status
+error.invalid_delivery_type = Invalid delivery type
+error.invalid_cost = Invalid cost
+error.invalid_items = Order items doesn't meet the requirements
+
+
