--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,4 +1,12 @@
-add.book=Add new book
+#Books messages
+add.book = Add new book
+book.select_genre = Select genre
+book.select_cover = Select cover
+book = Book
+books = Books
+edit_book = Edit book
+
+#Books parameters
 title=Title
 author=Author
 price=Price
@@ -7,7 +15,8 @@ cover=Cover
 isbn=ISBN
 pages=Pages
 rating=Rating
-book.select_genre=Select genre
+
+#Books genres
 genre.fiction=fiction
 genre.mystery=mystery
 genre.thriller=thriller
@@ -23,85 +32,103 @@ genre.religion=religion
 genre.medicine=medicine
 genre.engineering=engineering
 genre.art=art
-book.select_cover=Select cover
+
+#Books covers
 cover.soft=soft
 cover.hard=hard
 cover.special=special
-id=id
-bookstore=Bookstore
-book=Book
-books=Books
-add_to_cart=Add to cart
-no_books_found=No books found
+
+#Books error messages
+books.unable_to_find_containing=Unable to find books containing
+book.unable_to_find_id=Unable to find book with id
+book.unable_to_find_isbn=Unable to find book with isbn
+books.unable_to_find_author=Unable to find books written by
+books.not_found = No books found
+book.unable_to_delete_id = Unable tot delete book with id
+in_title=in title
+
+#Users messages
+user=User
+users=Users
+select.role=Select role
+add.user=Add user
+edit_user=Edit user
+
+#Users parameters
+firstname=Firstname
+lastname=Lastname
+email=email
+password=password
+role=Role
+
+#Users roles
+role.user=user
+role.manager=manager
+role.admin=admin
+
+#Users error messages
+user.unable_to_create=Unable to create user
+user.unable_to_update=Unable to update user
+user.unable_to_delete_id=Unable to delete user with id
+user.unable_to_find_id=Unable to find user with id
+user.unable_to_find_email=Unable to find user with email
+users.not_found=No users found
+users.unable_to_find_lastname=Unable to find users with lastname
+
+#Pagination
 first=first
 next=next
 previous=previous
 last=last
-your_cart_is_empty=Your cart is empty
-cart=Cart
-quantity=quantity
-cost=cost
-confirm_order=Confirm order
-order=order
-delivery_type=delivery type
+
+#Orders messages
 select.delivery_type=Select delivery type
+select.payment_method=Select payment method
+order=order
+successful_order=Successful order
+number_of_your_order_is=Number of your order is
+my_orders=My orders
+edit_order=Edit order
+select.order_status=Select order status
+select.payment_status=Select payment status
+our_manager_will_contact_you_soon=Our manager will contact you soon!
+confirm_order=Confirm order
+
+#Orders parameters
+delivery_type=delivery type
+payment_method=payment method
+payment_status=payment status
+order_status=order status
+cost=cost
+
+#Orders order status
+order_status.open=open
+order_status.confirmed=confirmed
+order_status.completed=completed
+order_status.cancelled=cancelled
+
+#Orders payment method
+payment_method.cash=cash
+payment_method.card=card
+payment_method.bank_transfer=bank transfer
+
+#Orders payment status
+payment_status.unpaid=unpaid
+payment_status.failed=failed
+payment_status.paid=paid
+payment_status.refunded=refunded
+
+#Orders delivery type
 delivery_type.courier=courier
 delivery_type.bike=bike
 delivery_type.car=car
 delivery_type.mail=mail
 delivery_type.self_pickup=self pickup
-order_status=order status
-order_status.open=open
-order_status.confirmed=confirmed
-order_status.completed=completed
-order_status.cancelled=cancelled
-payment_method=payment method
-select.payment_method=Select payment method
-payment_method.cash=cash
-payment_method.card=card
-payment_method.bank_transfer=bank transfer
-payment_method.cash_to_courier=cash to courier
-payment_method.card_to_courier=card to courier
-payment_status=payment status
-payment_status.unpaid=unpaid
-payment_status.failed=failed
-payment_status.paid=paid
-payment_status.refunded=refunded
-edit_book=edit book
-user=user
-edit_user=edit user
-firstname=firstname
-lastname=lastname
-email=email
-password=password
-role=role
-select.role=Select role
-role.user=user
-role.manager=manager
-role.admin=admin
-error=Error
-something_went_wrong=Something went wrong
-login=Log in
-home=home
-logout=Log Out
-register=Register
-search=search
-successful_order=Successful order
-number_of_your_order_is=Number of your order is
-our_manager_will_contact_you_soon=Our manager will contact you soon!
-no_users_found=No users found
-edit=Edit
-users=Users
-add.user=Add user
-remove=Remove
-books.unable_to_find_containing=Unable to find books containing
-in_title=in title
-count_failed=Count failed
-book.unable_to_find_id=Unable to find book with id
-book.unable_to_find_isbn=Unable to find book with isbn
-books.unable_to_find_author=Unable to find books written by
+
+#Orders error messages
 items.not_found_by_ord_id=No order items for order id
 order.unable_to_find_id=Unable to find order with id
+orders.unable_to_find_user_id = Unable to find orders with user id
 orders.unable_to_find=Unable to find orders
 order.unable_to_create=Unable to create order
 order.unable_to_update=Unable to update order
@@ -110,13 +137,44 @@ items.not_found=Unable to find items
 item.unable_to_create=Unable to create order item
 item.unable_to_update=Unable to update order item
 item.unable_to_delete=Unable to delete order item
-user.unable_to_create=Unable to create user
-user.unable_to_update=Unable to update user
-user.unable_to_delete=Unable to delete user
-user.unable_to_find_id=Unable to find user with id
-user.unable_to_find_email=Unable to find user with email
-users.not_found=No users found
-users.unable_to_find_lastname=Unable to find users with lastname
-my_orders=My orders
 orders.not_found=No orders found
+
+#Service messages
+id=id
+bookstore=Bookstore
+add_to_cart=Add to cart
+your_cart_is_empty=Your cart is empty
+cart=Cart
+quantity=quantity
+error=Error
+something_went_wrong=Something went wrong
+login=Log in
+home=home
+logout=Log Out
+register=Register
+search=search
+edit=Edit
+count_failed=Count failed
+remove=Remove
+
+#Validation
 error.email_in_use = The email address you provided is already in use by another member.
+error.invalid_email = Email is not valid
+error.invalid_password = Password doesn't meet the requirements
+error.invalid_firstname = Firstname doesn't meet the requirements
+error.invalid_lastname = Lastname doesn't meet the requirements
+error.invalid_title = Title doesn't meet the requirements
+error.invalid_author = Author doesn't meet the requirements
+error.invalid_pages = Number of pages is too small
+error.invalid_isbn = Isbn doesn't meet the requirements
+error.invalid_genre = Genre doesn't meet the requirements
+error.invalid_cover = Cover doesn't meet the requirements
+error.invalid_price = Price doesn't meet the requirements
+error.invalid_rating = Rating doesn't meet the requirements
+error.invalid_user = Invalid user
+error.invalid_order_status = Invalid order status
+error.invalid_payment_method = Invalid payment method
+error.invalid_payment_status = Invalid payment status
+error.invalid_delivery_type = Invalid delivery type
+error.invalid_cost = Invalid cost
+error.invalid_items = Order items doesn't meet the requirements
