added tests for BookRepository and userService, implemented order search by id for admin, order editing

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -93,6 +93,8 @@ select.order_status=Select order status
 select.payment_status=Select payment status
 our_manager_will_contact_you_soon=Our manager will contact you soon!
 confirm_order=Confirm order
+orders = Orders
+orders.search = Search orders
 
 #Orders parameters
 delivery_type=delivery type
