fixed some issues

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -43,6 +43,7 @@ books.unable_to_find_containing=Unable to find books containing
 book.unable_to_find_id=Unable to find book with id
 book.unable_to_find_isbn=Unable to find book with isbn
 books.unable_to_find_author=Unable to find books written by
+book.isbn_in_use=Unable to add new book, such isbn is already in use
 books.not_found = No books found
 book.unable_to_delete_id = Unable tot delete book with id
 in_title=in title
