--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -181,3 +181,5 @@ error.invalid_payment_status = Invalid payment status
 error.invalid_delivery_type = Invalid delivery type
 error.invalid_cost = Invalid cost
 error.invalid_items = Order items doesn't meet the requirements
+error.default_server = We are already working on the problem, we will soon solve this issue!
+error.default_client = Ooops... Something went wrong!
