--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -75,6 +75,7 @@ user.unable_to_find_id=Unable to find user with id
 user.unable_to_find_email=Unable to find user with email
 users.not_found=No users found
 users.unable_to_find_lastname=Unable to find users with lastname
+user.wrong_email_of_password=Wrong email or password
 
 #Pagination
 first=first
