annotation config complete

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -180,3 +180,4 @@ error.invalid_payment_status = Invalid payment status
 error.invalid_delivery_type = Invalid delivery type
 error.invalid_cost = Invalid cost
 error.invalid_items = Order items doesn't meet the requirements
+error.wrong_email_or_password = Wrong email or password
