jpa methods implemented in all repositories, some issues require fixing.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -44,7 +44,7 @@ book.unable_to_find_id=Unable to find book with id
 book.unable_to_find_isbn=Unable to find book with isbn
 books.unable_to_find_author=Unable to find books written by
 book.isbn_in_use=Unable to add new book, such isbn is already in use
-books.not_found = No books found
+books.unable_to_find = No books found
 book.unable_to_delete_id = Unable tot delete book with id
 in_title=in title
 
