--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -167,3 +167,4 @@ error.invalid_items=Order items doesn't meet the requirements
 error.wrong_email_or_password=Wrong email or password
 error.default_server=We are already working on the problem, we will soon solve this issue!
 error.default_client=Ooops... Something went wrong!
+proceed.to.purchasing=Proceed to purchasing
