Error handling seems to be done. Interceptors ahead

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -39,6 +39,7 @@ books.unable_to_find_containing=Unable to find books containing
 book.unable_to_find_id=Unable to find book with id
 book.unable_to_find_isbn=Unable to find book with isbn
 books.unable_to_find_author=Unable to find books written by
+book.unable_to_create = Unable to add new book
 book.isbn_in_use=Unable to add new book, such isbn is already in use
 books.unable_to_find=No books found
 book.unable_to_delete_id=Unable tot delete book with id
@@ -134,7 +135,7 @@ your_cart_is_empty=Your cart is empty
 cart=Cart
 quantity=quantity
 error=Error
-something_went_wrong=Something went wrong
+something_went_wrong=Ooops! Something went wrong
 login=Log in
 home=home
 logout=Log Out
