Authorisation filter implemented, fixed some issues

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -15,25 +15,25 @@ isbn=ISBN
 pages=Pages
 rating=Rating
 #Books genres
-genre.fiction=fiction
-genre.mystery=mystery
-genre.thriller=thriller
-genre.horror=horror
-genre.historical=historical
-genre.romance=romance
-genre.western=western
-genre.floristics=floristics
-genre.science_fiction=science fiction
-genre.dystopian=dystopian
-genre.realism=realism
-genre.religion=religion
-genre.medicine=medicine
-genre.engineering=engineering
-genre.art=art
+genre.FICTION=fiction
+genre.MYSTERY=mystery
+genre.THRILLER=thriller
+genre.HORROR=horror
+genre.HISTORICAL=historical
+genre.ROMANCE=romance
+genre.WESTERN=western
+genre.FLORISTICS=floristics
+genre.SCIENCE_FICTION=science fiction
+genre.DYSTOPIAN=dystopian
+genre.REALISM=realism
+genre.RELIGION=religion
+genre.MEDICINE=medicine
+genre.ENGINEERING=engineering
+genre.ART=art
 #Books covers
-cover.soft=soft
-cover.hard=hard
-cover.special=special
+cover.SOFT=soft
+cover.HARD=hard
+cover.SPECIAL=special
 #Books error messages
 books.unable_to_find_containing=Unable to find books containing
 book.unable_to_find_id=Unable to find book with id
@@ -56,9 +56,9 @@ email=email
 password=password
 role=Role
 #Users roles
-role.user=user
-role.manager=manager
-role.admin=admin
+role.USER=user
+role.MANAGER=manager
+role.ADMIN=admin
 #Users error messages
 user.unable_to_create=Unable to create user
 user.unable_to_update=Unable to update user
@@ -94,25 +94,25 @@ payment_status=payment status
 order_status=order status
 cost=cost
 #Orders order status
-order_status.open=open
-order_status.confirmed=confirmed
-order_status.completed=completed
-order_status.cancelled=cancelled
+order_status.OPEN=open
+order_status.CONFIRMED=confirmed
+order_status.COMPLETED=completed
+order_status.CANCELLED=cancelled
 #Orders payment method
-payment_method.cash=cash
-payment_method.card=card
-payment_method.bank_transfer=bank transfer
+payment_method.CASH=cash
+payment_method.CARD=card
+payment_method.BANK_TRANSFER=bank transfer
 #Orders payment status
-payment_status.unpaid=unpaid
-payment_status.failed=failed
-payment_status.paid=paid
-payment_status.refunded=refunded
+payment_status.UNPAID=unpaid
+payment_status.FAILED=failed
+payment_status.PAID=paid
+payment_status.REFUNDED=refunded
 #Orders delivery type
-delivery_type.courier=courier
-delivery_type.bike=bike
-delivery_type.car=car
-delivery_type.mail=mail
-delivery_type.self_pickup=self pickup
+delivery_type.COURIER=courier
+delivery_type.BIKE=bike
+delivery_type.CAR=car
+delivery_type.MAIL=mail
+delivery_type.SELF_PICKUP=self pickup
 #Orders error messages
 items.not_found_by_ord_id=No order items for order id
 order.unable_to_find_id=Unable to find order with id
