--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -15,25 +15,25 @@ isbn=ISBN
 pages=\u0421\u0442\u0440\u0430\u043D\u0438\u0446
 rating=\u0420\u0435\u0439\u0442\u0438\u043D\u0433
 #Books genres
-genre.fiction=\u0444\u0430\u043D\u0442\u0430\u0441\u0442\u0438\u043A\u0430
-genre.mystery=\u043C\u0438\u0441\u0442\u0438\u043A\u0430
-genre.thriller=\u0442\u0440\u0438\u043B\u043B\u0435\u0440
-genre.horror=\u0443\u0436\u0430\u0441\u044B
-genre.historical=\u0438\u0441\u0442\u043E\u0440\u0438\u0447\u0435\u0441\u043A\u0438\u0439
-genre.romance=\u0440\u043E\u043C\u0430\u043D
-genre.western=\u0432\u0435\u0441\u0442\u0435\u0440\u043D
-genre.floristics=\u0444\u043B\u043E\u0440\u0438\u0441\u0442\u0438\u043A\u0430
-genre.science_fiction=\u043D\u0430\u0443\u0447\u043D\u0430\u044F \u0444\u0430\u043D\u0442\u0430\u0441\u0442\u0438\u043A\u0430
-genre.dystopian=\u0430\u043D\u0442\u0438\u0443\u0442\u043E\u043F\u0438\u044F
-genre.realism=\u0440\u0435\u0430\u043B\u0438\u0437\u043C
-genre.religion=\u0440\u0435\u043B\u0438\u0433\u0438\u044F
-genre.medicine=\u043C\u0435\u0434\u0438\u0446\u0438\u043D\u0430
-genre.engineering=\u0438\u043D\u0436\u0435\u043D\u0435\u0440\u0438\u044F
-genre.art=\u0438\u0441\u043A\u0443\u0441\u0441\u0442\u0432\u043E
+genre.FICTION=\u0444\u0430\u043D\u0442\u0430\u0441\u0442\u0438\u043A\u0430
+genre.MYSTERY=\u043C\u0438\u0441\u0442\u0438\u043A\u0430
+genre.THRILLER=\u0442\u0440\u0438\u043B\u043B\u0435\u0440
+genre.HORROR=\u0443\u0436\u0430\u0441\u044B
+genre.HISTORICAL=\u0438\u0441\u0442\u043E\u0440\u0438\u0447\u0435\u0441\u043A\u0438\u0439
+genre.ROMANCE=\u0440\u043E\u043C\u0430\u043D
+genre.WESTERN=\u0432\u0435\u0441\u0442\u0435\u0440\u043D
+genre.FLORISTICS=\u0444\u043B\u043E\u0440\u0438\u0441\u0442\u0438\u043A\u0430
+genre.SCIENCE_FICTION=\u043D\u0430\u0443\u0447\u043D\u0430\u044F \u0444\u0430\u043D\u0442\u0430\u0441\u0442\u0438\u043A\u0430
+genre.DYSTOPIAN=\u0430\u043D\u0442\u0438\u0443\u0442\u043E\u043F\u0438\u044F
+genre.REALISM=\u0440\u0435\u0430\u043B\u0438\u0437\u043C
+genre.RELIGION=\u0440\u0435\u043B\u0438\u0433\u0438\u044F
+genre.MEDICINE=\u043C\u0435\u0434\u0438\u0446\u0438\u043D\u0430
+genre.ENGINEERING=\u0438\u043D\u0436\u0435\u043D\u0435\u0440\u0438\u044F
+genre.ART=\u0438\u0441\u043A\u0443\u0441\u0441\u0442\u0432\u043E
 #Books covers
-cover.soft=\u043C\u044F\u0433\u043A\u0430\u044F
-cover.hard=\u0436\u0435\u0441\u0442\u043A\u0430\u044F
-cover.special=\u043E\u0441\u043E\u0431\u0430\u044F
+cover.SOFT=\u043C\u044F\u0433\u043A\u0430\u044F
+cover.HARD=\u0436\u0435\u0441\u0442\u043A\u0430\u044F
+cover.SPECIAL=\u043E\u0441\u043E\u0431\u0430\u044F
 #Books error messages
 books.unable_to_find_containing=\u041D\u0435 \u0443\u0434\u0430\u043B\u043E\u0441\u044C \u043D\u0430\u0439\u0442\u0438 \u043A\u043D\u0438\u0433\u0438, \u0441\u043E\u0434\u0435\u0440\u0436\u0430\u0449\u0438\u0435
 in_title=\u0432 \u043D\u0430\u0437\u0432\u0430\u043D\u0438\u0438
@@ -56,9 +56,9 @@ email=email
 password=\u043F\u0430\u0440\u043E\u043B\u044C
 role=\u0420\u043E\u043B\u044C
 #Users roles
-role.user=\u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C
-role.manager=\u041C\u0435\u043D\u0435\u0434\u0436\u0435\u0440
-role.admin=\u0410\u0434\u043C\u0438\u043D\u0438\u0441\u0442\u0440\u0430\u0442\u043E\u0440
+role.USER=\u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C
+role.MANAGER=\u041C\u0435\u043D\u0435\u0434\u0436\u0435\u0440
+role.ADMIN=\u0410\u0434\u043C\u0438\u043D\u0438\u0441\u0442\u0440\u0430\u0442\u043E\u0440
 #Users error messages
 user.unable_to_create=\u041D\u0435 \u0443\u0434\u0430\u043B\u043E\u0441\u044C \u0441\u043E\u0437\u0434\u0430\u0442\u044C \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F
 user.unable_to_update=\u041D\u0435 \u0443\u0434\u0430\u043B\u043E\u0441\u044C \u043E\u0431\u043D\u043E\u0432\u0438\u0442\u044C \u0438\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0438\u044E \u043E \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0435
@@ -94,25 +94,25 @@ payment_method=\u0421\u043F\u043E\u0441\u043E\u0431 \u043E\u043F\u043B\u0430\u04
 payment_status=\u0421\u0442\u0430\u0442\u0443\u0441 \u043E\u043F\u043B\u0430\u0442\u044B
 cost=\u0441\u0442\u043E\u0438\u043C\u043E\u0441\u0442\u044C
 #Orders order status
-order_status.open=\u043E\u0442\u043A\u0440\u044B\u0442
-order_status.confirmed=\u043F\u043E\u0434\u0442\u0432\u0435\u0440\u0436\u0434\u0435\u043D
-order_status.completed=\u0432\u044B\u043F\u043E\u043B\u043D\u0435\u043D
-order_status.cancelled=\u043E\u0442\u043C\u0435\u043D\u0435\u043D
+order_status.OPEN=\u043E\u0442\u043A\u0440\u044B\u0442
+order_status.CONFIRMED=\u043F\u043E\u0434\u0442\u0432\u0435\u0440\u0436\u0434\u0435\u043D
+order_status.COMPLETED=\u0432\u044B\u043F\u043E\u043B\u043D\u0435\u043D
+order_status.CANCELLED=\u043E\u0442\u043C\u0435\u043D\u0435\u043D
 #Orders payment method
-payment_method.cash=\u043D\u0430\u043B\u0438\u0447\u043D\u044B\u0435
-payment_method.card=\u043A\u0430\u0440\u0442\u0430
-payment_method.bank_transfer=\u0431\u0430\u043D\u043A\u043E\u0432\u0441\u043A\u0438\u0439 \u043F\u0435\u0440\u0435\u0432\u043E\u0434
+payment_method.CASH=\u043D\u0430\u043B\u0438\u0447\u043D\u044B\u0435
+payment_method.CARD=\u043A\u0430\u0440\u0442\u0430
+payment_method.BANK_TRANSFER=\u0431\u0430\u043D\u043A\u043E\u0432\u0441\u043A\u0438\u0439 \u043F\u0435\u0440\u0435\u0432\u043E\u0434
 #Orders payment status
-payment_status.unpaid=\u043D\u0435 \u043E\u043F\u043B\u0430\u0447\u0435\u043D\u043E
-payment_status.failed=\u043D\u0435 \u0443\u0434\u0430\u043B\u043E\u0441\u044C
-payment_status.paid=\u043E\u043F\u043B\u0430\u0447\u0435\u043D\u043E
-payment_status.refunded=\u0432\u043E\u0437\u0432\u0440\u0430\u0449\u0435\u043D\u043E
+payment_status.UNPAID=\u043D\u0435 \u043E\u043F\u043B\u0430\u0447\u0435\u043D\u043E
+payment_status.FAILED=\u043D\u0435 \u0443\u0434\u0430\u043B\u043E\u0441\u044C
+payment_status.PAID=\u043E\u043F\u043B\u0430\u0447\u0435\u043D\u043E
+payment_status.REFUNDED=\u0432\u043E\u0437\u0432\u0440\u0430\u0449\u0435\u043D\u043E
 #Orders delivery type
-delivery_type.courier=\u043A\u0443\u0440\u044C\u0435\u0440
-delivery_type.bike=\u0432\u0435\u043B\u043E\u043A\u0443\u0440\u044C\u0435\u0440
-delivery_type.car=\u0430\u0432\u0442\u043E\u043C\u043E\u0431\u0438\u043B\u044C
-delivery_type.mail=\u043F\u043E\u0447\u0442\u0430
-delivery_type.self_pickup=\u0441\u0430\u043C\u043E\u0432\u044B\u0432\u043E\u0437
+delivery_type.COURIER=\u043A\u0443\u0440\u044C\u0435\u0440
+delivery_type.BIKE=\u0432\u0435\u043B\u043E\u043A\u0443\u0440\u044C\u0435\u0440
+delivery_type.CAR=\u0430\u0432\u0442\u043E\u043C\u043E\u0431\u0438\u043B\u044C
+delivery_type.MAIL=\u043F\u043E\u0447\u0442\u0430
+delivery_type.SELF_PICKUP=\u0441\u0430\u043C\u043E\u0432\u044B\u0432\u043E\u0437
 #Orders error messages
 orders.unable_to_find_user_id=\u041D\u0435\u0432\u043E\u0437\u043C\u043E\u0436\u043D\u043E \u043D\u0430\u0439\u0442\u0438 \u0437\u0430\u043A\u0430\u0437\u044B \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F \u0441 Id
 order.unable_to_find_id=\u041D\u0435 \u0443\u0434\u0430\u043B\u043E\u0441\u044C \u043D\u0430\u0439\u0442\u0438 \u0437\u0430\u043A\u0430\u0437
