fixed some issues

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -169,3 +169,6 @@ error.wrong_email_or_password=Wrong email or password
 error.default_server=We are already working on the problem, we will soon solve this issue!
 error.default_client=Ooops... Something went wrong!
 proceed.to.purchasing=Proceed to purchasing
+delete=Delete
+available.true=Available
+available.false=Not available
