fixed some issues. edit order doesn't work

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -171,3 +171,4 @@ proceed.to.purchasing=Proceed to purchasing
 delete=Delete
 available.true=Available
 available.false=Not available
+access_denied=Access_denied!
