--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -172,3 +172,4 @@ proceed.to.purchasing=Proceed to purchasing
 delete=Delete
 available.true=Available
 available.false=Not available
+access_denied=Access denied!
