Spring security in progress

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -173,3 +173,4 @@ delete=Delete
 available.true=Available
 available.false=Not available
 access_denied=Access denied!
+session_timeout=Session has expired
