--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -172,3 +172,4 @@ delete=Delete
 available.true=Available
 available.false=Not available
 access_denied=Access_denied!
+session_timeout=Session has expired
