--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -172,3 +172,4 @@ delete=\u0423\u0434\u0430\u043B\u0438\u0442\u044C
 available.true=\u0412 \u043D\u0430\u043B\u0438\u0447\u0438\u0438
 available.false=\u041D\u0435\u0442 \u043D\u0430 \u0441\u043A\u043B\u0430\u0434\u0435
 access_denied=\u0414\u043E\u0441\u0442\u0443\u043F \u0437\u0430\u043F\u0440\u0435\u0449\u0435\u043D!
+session_timeout=????? ?????? ???????
