fixed some issues

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -42,7 +42,7 @@ books.unable_to_find_author=Unable to find books written by
 book.unable_to_create = Unable to add new book
 book.isbn_in_use=Unable to add new book, such isbn is already in use
 books.unable_to_find=No books found
-book.unable_to_delete_id=Unable tot delete book with id
+book.unable_to_delete_id=Unable to delete book with id
 in_title=in title
 #Users messages
 user=User
@@ -67,7 +67,7 @@ user.unable_to_delete_id=Unable to delete user with id
 user.unable_to_find_id=Unable to find user with id
 user.unable_to_find_email=Unable to find user with email
 users.not_found=No users found
-users.unable_to_find_lastname=Unable to find users with lastname
+users.unable_to_find_lastname=Unable to find users with lastname {}
 user.wrong_email_of_password=Wrong email or password
 #Pagination
 first=first
@@ -122,10 +122,6 @@ orders.unable_to_find=Unable to find orders
 order.unable_to_create=Unable to create order
 order.unable_to_update=Unable to update order
 order.unable_to_delete=Unable to delete order
-items.not_found=Unable to find items
-item.unable_to_create=Unable to create order item
-item.unable_to_update=Unable to update order item
-item.unable_to_delete=Unable to delete order item
 orders.not_found=No orders found
 #Service messages
 id=id
