--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -121,10 +121,6 @@ orders.unable_to_find=Unable to find orders
 order.unable_to_create=Unable to create order
 order.unable_to_update=Unable to update order
 order.unable_to_delete=Unable to delete order
-items.not_found=Unable to find items
-item.unable_to_create=Unable to create order item
-item.unable_to_update=Unable to update order item
-item.unable_to_delete=Unable to delete order item
 orders.not_found=No orders found
 #Service messages
 id=id
@@ -171,4 +167,4 @@ proceed.to.purchasing=Proceed to purchasing
 delete=Delete
 available.true=Available
 available.false=Not available
-access_denied=Access_denied!
+access_denied=Access denied!
