fixed some issues

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -36,7 +36,7 @@ cover.HARD=hard
 cover.SPECIAL=special
 #Books error messages
 books.unable_to_find_containing=Unable to find books containing
-book.unable_to_find_id=Unable to find book with id
+book.unable_to_find_id=Unable to find book with id {}
 book.unable_to_find_isbn=Unable to find book with isbn
 books.unable_to_find_author=Unable to find books written by
 book.unable_to_create = Unable to add new book
